--- a/Vpn.WebUI/Shared/NavMenu.razor
+++ b/Vpn.WebUI/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
+    <MudNavLink Href="VpnList" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Danh sách đăng ký VPN</MudNavLink>
     <MudNavLink Href="TestDateTime" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">TestDateTime</MudNavLink>
 </MudNavMenu>
