--- a/Vpn.WebUI/Pages/Index.razor
+++ b/Vpn.WebUI/Pages/Index.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<MudText Typo="Typo.h3" >Đăng ký sử dụng VPN BHXH</MudText>
+<MudText Typo="Typo.h3" >Ghi Danh sử dụng VPN BHXH</MudText>
 @if(vpnDtos==null)
 {
     <p>loading...</p>
